# BreakWordTraps

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
break_word_traps/: calculate_readability.py  endpoints.py  entrypoint.py  extract_autio.py  schemas.py
break_word_traps/tools/bielik/: model.py
break_word_traps/tools/fer/: analyzer.py  fer.py  models.py  sub_functions.py  types.py
break_word_traps/tools/pose/: drawing.py
break_word_traps/tools/whisper/: calculate_readability.py  model.py
break_word_traps/utils/: service_types.py
break_word_traps/whisper/: model.py
docker/: Dockerfile_asr.dockerfile  Dockerfile_backend.dockerfile  Dockerfile_fer.dockerfile  Dockerfile_llm.dockerfile  Dockerfile_whisper.dockerfile
