[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "break_word_traps"
description = "AI microservice for BreakWordTraps"
version = "0.0.1"
readme = "README.md"
dependencies = [
  "aiofile",
  "aiosonic",
  "fastapi",
  "python-multipart",
  "uvicorn",
  "uvloop ; platform_system != 'Windows'",
  "typer",
  "rich",
  "imageio_ffmpeg",
  "opencv-python",
  "requests",
]

[project.optional-dependencies]
asr = [
  "stable-ts[hf]",
  "py-readability-metrics",
]

[project.scripts]
bwt = "break_word_traps.entrypoint:cli"

[tool.setuptools.packages.find]
include = ["break_word_traps"]
